@@ -109,6 +109,10 @@ init|=
 literal|0
 decl_stmt|;
 specifier|private
+name|String
+name|hbaseVersion
+decl_stmt|;
+specifier|private
 name|Collection
 argument_list|<
 name|HServerInfo
@@ -334,6 +338,30 @@ return|return
 name|count
 return|;
 block|}
+comment|/**    * @return the HBase version string as reported by the HMaster    */
+specifier|public
+name|String
+name|getHBaseVersion
+parameter_list|()
+block|{
+return|return
+name|hbaseVersion
+return|;
+block|}
+comment|/**    * @param version the HBase version string    */
+specifier|public
+name|void
+name|setHBaseVersion
+parameter_list|(
+name|String
+name|version
+parameter_list|)
+block|{
+name|hbaseVersion
+operator|=
+name|version
+expr_stmt|;
+block|}
 comment|/**    * @see java.lang.Object#equals(java.lang.Object)    */
 specifier|public
 name|boolean
@@ -384,6 +412,22 @@ name|getVersion
 argument_list|()
 operator|)
 operator|&&
+name|getHBaseVersion
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+operator|(
+operator|(
+name|ClusterStatus
+operator|)
+name|o
+operator|)
+operator|.
+name|getHBaseVersion
+argument_list|()
+argument_list|)
+operator|&&
 name|liveServerInfo
 operator|.
 name|equals
@@ -421,6 +465,11 @@ parameter_list|()
 block|{
 return|return
 name|VERSION
+operator|+
+name|hbaseVersion
+operator|.
+name|hashCode
+argument_list|()
 operator|+
 name|liveServerInfo
 operator|.
@@ -525,6 +574,13 @@ argument_list|)
 expr_stmt|;
 name|out
 operator|.
+name|writeUTF
+argument_list|(
+name|hbaseVersion
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
 name|writeInt
 argument_list|(
 name|liveServerInfo
@@ -592,6 +648,13 @@ name|readFields
 argument_list|(
 name|in
 argument_list|)
+expr_stmt|;
+name|hbaseVersion
+operator|=
+name|in
+operator|.
+name|readUTF
+argument_list|()
 expr_stmt|;
 name|int
 name|count
