@@ -837,6 +837,22 @@ name|hadoop
 operator|.
 name|hbase
 operator|.
+name|util
+operator|.
+name|VersionInfo
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
 name|zookeeper
 operator|.
 name|ZooKeeperWrapper
@@ -5369,6 +5385,16 @@ operator|new
 name|ClusterStatus
 argument_list|()
 decl_stmt|;
+name|status
+operator|.
+name|setHBaseVersion
+argument_list|(
+name|VersionInfo
+operator|.
+name|getVersion
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|status
 operator|.
 name|setServerInfo
